Refactor Dapr Sample: Update State Store to In-Memory, Enhance Configurations, and Organize Tests
- Changed state store component from PostgreSQL to in-memory in statestore.yaml.
- Updated dapr config.yaml to include Zipkin tracing, enable metrics, and configure actor settings.
- Modified docker-compose.yml to change Redis port to avoid conflicts and added container names.
- Created organize-tests.sh script to structure test files into appropriate directories.
- Updated package.json scripts for improved Dapr and PostgreSQL management.
- Removed redundant pubsub and statestore configurations from API package.
- Added run-dev-with-dapr-clean.sh for clean development starts with Dapr.
- Enhanced server.ts to integrate Dapr actors and improved logging functionality.
- Removed outdated actor routes and implemented new actor handling in server.ts.
- Introduced custom logger utility for better log management.
- Improved test scripts for task creation and server health checks.
- Added aggregate actor factory and event handler actor factory for better actor management.

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,30 @@ FodyWeavers.xsd
 .DS_Store
 
 temp/
+
+# TypeScript build outputs
+dist/
+*.tsbuildinfo
+
+# Backup files
+*.bak
+
+# Package manager lock files (when using pnpm)
+package-lock.json
+yarn.lock
+
+# Environment files
+.env
+.env.*
+!.env.example
+!.env.template
+
+# Build/cache directories
+.turbo
+.cache
+.vitecache
+.next
+
+# Test coverage
+coverage/
+.nyc_output/
