--- a/ts/samples/dapr-sample/package.json
+++ b/ts/samples/dapr-sample/package.json
@@ -11,9 +11,15 @@
     "dev": "pnpm -r --parallel dev",
     "test": "pnpm -r test",
     "clean": "pnpm -r clean",
-    "dapr:api": "dapr run --app-id sekiban-api --app-port 3000 --components-path ./dapr-components-local --config ./dapr-config/config.yaml -- pnpm --filter @dapr-sample/api dev",
-    "dapr:postgres": "docker-compose up -d postgres",
-    "dapr:stop": "docker-compose down",
+    "dapr:api": "dapr run --app-id sekiban-api --app-port 3000 --components-path ./dapr/components --config ./dapr/config.yaml -- pnpm --filter @dapr-sample/api dev",
+    "dapr:start": "./run-with-dapr.sh",
+    "dapr:placement": "./start-dapr-placement.sh",
+    "postgres:start": "docker-compose up -d postgres",
+    "postgres:stop": "docker-compose down postgres",
+    "redis:start": "docker-compose up -d redis",
+    "redis:stop": "docker-compose down redis",
+    "services:start": "docker-compose up -d",
+    "services:stop": "docker-compose down",
     "setup": "pnpm install && pnpm build"
   },
   "devDependencies": {
