--- a/ts/samples/dapr-sample/dapr/components/statestore.yaml
+++ b/ts/samples/dapr-sample/dapr/components/statestore.yaml
@@ -3,12 +3,8 @@ kind: Component
 metadata:
   name: statestore
 spec:
-  type: state.postgresql
+  type: state.in-memory
   version: v1
   metadata:
-  - name: connectionString
-    value: "host=localhost user=sekiban password=sekiban_password port=5432 connect_timeout=10 database=sekiban_events"
   - name: actorStateStore
     value: "true"
-  - name: tableName
-    value: "state"
