--- a/ts/samples/dapr-sample/dapr/config.yaml
+++ b/ts/samples/dapr-sample/dapr/config.yaml
@@ -5,8 +5,20 @@ metadata:
 spec:
   tracing:
     samplingRate: "1"
+    zipkin:
+      endpointAddress: "http://localhost:9411/api/v2/spans"
+  metric:
+    enabled: true
+  actor:
+    actorIdleTimeout: "1h"
+    actorScanInterval: "30s"
+    drainOngoingCallTimeout: "30s"
+    drainRebalancedActors: true
+    remindersStoragePartitions: 7
   features:
     - name: Actor
       enabled: true
     - name: ActorStateTTL
+      enabled: true
+    - name: proxy.grpc
       enabled: true
