feat: Refactor Dapr actor implementation and integrate Awilix for dependency injection
- Introduced AggregateActorImpl for better separation of concerns and business logic encapsulation.
- Updated AggregateActor to delegate methods to AggregateActorImpl, maintaining Dapr compatibility.
- Implemented Awilix container for managing dependencies in Dapr actors.
- Added serialization types for command and event handling.
- Removed outdated test scripts for actor integration and API testing.
- Enhanced logging for actor registration and method execution for better debugging.
- Updated package.json to include Awilix as a dependency.
- Improved error handling in command execution within SekibanDaprExecutor.

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,11 @@ yarn.lock
 # Test coverage
 coverage/
 .nyc_output/
+
+# Temporary files and logs
+tmp/
+*.log
+dev.log
+
+# pnpm store
+.pnpm-store/
