--- a/ts/samples/dapr-sample/packages/api/package.json
+++ b/ts/samples/dapr-sample/packages/api/package.json
@@ -7,8 +7,14 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "dev": "tsx watch src/server.ts",
+    "dev:simple": "tsx watch src/simple-server.ts",
+    "dev:simple-di": "tsx watch src/simple-server-with-di.ts",
+    "dev:wrapper": "tsx watch src/simple-server-wrapper.ts",
     "demo": "tsx src/server.ts",
     "start": "node dist/server.js",
+    "start:simple": "node dist/simple-server.js",
+    "start:simple-di": "node dist/simple-server-with-di.js",
+    "start:wrapper": "node dist/simple-server-wrapper.js",
     "test": "vitest"
   },
   "dependencies": {
@@ -18,6 +24,7 @@
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
+    "awilix": "^10.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
