--- a/ts/samples/dapr-only/package.json
+++ b/ts/samples/dapr-only/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "dev:builtin": "tsx watch src/server-builtin.ts",
+    "dev:di": "tsx watch src/server-with-di.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "start:di": "node dist/server-with-di.js",
     "test": "tsx src/test-actor.ts"
   },
   "dependencies": {
     "@dapr/dapr": "^3.5.2",
+    "awilix": "^10.0.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
