feat: Enhance Dapr integration with PostgreSQL support and actor functionality
- Updated settings to include new command for building Dapr with pnpm.
- Commented out PostgreSQL volume configuration in docker-compose for flexibility.
- Added environment variables for actor server port and PostgreSQL usage in .env.example.
- Implemented database initialization script for PostgreSQL.
- Enhanced API server to support PostgreSQL event storage and added debug logging.
- Introduced new routes for testing actor invocations directly.
- Updated AggregateActor and AggregateEventHandlerActor to improve event handling and logging.
- Refactored MultiProjectorActor to utilize new event retrieval methods.
- Improved serialization and command metadata handling across various components.

--- a/ts/samples/dapr-sample/docker-compose.yml
+++ b/ts/samples/dapr-sample/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       POSTGRES_DB: sekiban_events
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    # volumes:
+    #   - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U sekiban"]
       interval: 10s
@@ -28,5 +28,5 @@ services:
       timeout: 5s
       retries: 5
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
