--- a/ts/samples/dapr-sample/packages/api/.env.example
+++ b/ts/samples/dapr-sample/packages/api/.env.example
@@ -1,8 +1,15 @@
 # Node environment
 NODE_ENV=development
-PORT=3000
 
-# PostgreSQL configuration for event storage
+# Server ports
+PORT=3000
+ACTOR_SERVER_PORT=50010
+
+# Storage configuration
+# Set to 'true' to use PostgreSQL, 'false' for in-memory storage
+USE_POSTGRES=false
+
+# PostgreSQL configuration (required when USE_POSTGRES=true)
 DATABASE_URL=postgresql://sekiban:sekiban_password@localhost:5432/sekiban_events
 
 # Dapr configuration
@@ -12,7 +19,10 @@ DAPR_APP_ID=sekiban-api
 DAPR_STATE_STORE_NAME=statestore
 DAPR_PUBSUB_NAME=pubsub
 DAPR_EVENT_TOPIC=events
+
+# Actor configuration
 DAPR_ACTOR_TYPE=AggregateActor
+DAPR_APP_ID_FOR_ACTORS=sekiban-api
 
 # API configuration
 API_PREFIX=/api
