--- a/ts/src/packages/dapr/package.json
+++ b/ts/src/packages/dapr/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "npm run typecheck && tsup",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
