feat: Update build scripts, enhance Dapr actor implementations, and add storage contract tests

--- a/ts/package.json
+++ b/ts/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "echo 'Please use pnpm build in individual packages'",
+    "build:old": "tsc",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
