refactor: remove integration and schema scanner tests, types, and configuration files
- Deleted integration tests for the SchemaScanner and CodeGenerator.
- Removed schema scanner tests that validate event, command, and projector definitions.
- Eliminated type definitions related to scanned schemas and configuration options.
- Removed TypeScript configuration and build setup files for the codegen package.

--- a/ts/samples/dapr-sample/packages/domain/package.json
+++ b/ts/samples/dapr-sample/packages/domain/package.json
@@ -14,8 +14,7 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "dev": "tsc --watch",
-    "test": "vitest",
-    "codegen": "sekiban-codegen generate"
+    "test": "vitest"
   },
   "dependencies": {
     "@sekiban/core": "file:../../../../src/packages/core",
@@ -23,7 +22,6 @@
     "neverthrow": "^6.1.0"
   },
   "devDependencies": {
-    "@sekiban/codegen": "file:../../../../src/packages/codegen",
     "@sekiban/testing": "file:../../../../src/packages/testing",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.3",
