feat: add unit tests for domain types and improve global registry integration
- Created unit tests for domain types in `domain-types.test.ts`, covering commands, events, projectors, and registry lookup functions.
- Enhanced `createTaskDomainTypes` function to expose commands, events, and projectors directly from the global registry.
- Updated TypeScript configuration in `tsconfig.json` for domain and workflows packages to include `skipLibCheck` and `noImplicitAny`.
- Added Vitest configuration file for testing setup.
- Introduced ESM package configuration for `@sekiban/core` with proper exports and scripts.
- Refactored imports across various files to use `.js` extensions for consistency.
- Updated build configuration in `tsup.config.ts` to support both ESM and CJS formats with appropriate settings.

--- a/ts/samples/dapr-sample/packages/domain/tsconfig.json
+++ b/ts/samples/dapr-sample/packages/domain/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "composite": true
+    "composite": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
