feat: Add test scripts for DummyActor and command debugging
- Introduced `test-actors.ts` to test DummyActor via HTTP calls.
- Created `test-command-debug.ts` for debugging command handling and context.
- Added a new test file `test-command-debug.ts` in the samples directory for command execution testing.

fix: Resolve multiple actor registration issue in Dapr SDK

- Documented the issue with multiple actor registrations in `multipleactorcall.md`.
- Updated actor factory and implementation to ensure proper registration and handling of multiple actors.
- Enhanced logging and error handling in `AggregateActorImpl` and `AggregateEventHandlerActor`.

refactor: Improve actor implementation and dependency injection

- Refactored actor classes to use Awilix for dependency injection.
- Simplified actor creation and registration process.
- Enhanced error handling and logging across actor methods.

chore: Update core exports and interfaces

- Updated exports in `index.ts` and `interfaces.ts` to include new types and interfaces.
- Cleaned up unused imports and improved type definitions in various files.

test: Add unit tests for Dapr executor and repository

- Added tests for `SekibanDaprExecutor` to ensure default actor type handling.
- Updated repository error handling to use `SekibanError` for consistency.

--- a/ts/samples/dapr-sample/packages/api/package.json
+++ b/ts/samples/dapr-sample/packages/api/package.json
@@ -16,13 +16,14 @@
     "start:simple-di": "node dist/simple-server-with-di.js",
     "start:wrapper": "node dist/simple-server-wrapper.js",
     "test": "vitest",
+    "test:command": "tsx src/test-command-debug.ts",
     "init-db": "tsx src/init-database.ts",
     "start:postgres": "USE_POSTGRES=true npm run start"
   },
   "dependencies": {
     "@dapr-sample/domain": "workspace:*",
     "@dapr-sample/workflows": "workspace:*",
-    "@dapr/dapr": "^3.3.0",
+    "@dapr/dapr": "^3.5.2",
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
