feat: Add multi-projector actor tests and pub/sub integration
- Implemented test logic for MultiProjectorActor projections in `test-projection-logic.ts`.
- Created `test-projections-direct.ts` to manually test projection logic with in-memory event store.
- Developed `test-pubsub.ts` to validate Dapr pub/sub integration and event publishing.
- Updated `tsconfig.json` to disable strict mode for compatibility.
- Enhanced `AggregateEventHandlerActor` to publish events to Dapr pub/sub after state updates.
- Improved `MultiProjectorActor` to catch up from event store and apply events to projections.
- Introduced `SerializableEventDocument` for consistent event serialization and deserialization.
- Added utility functions for converting between `IEvent` and `SerializableEventDocument`.
- Updated Dapr index to export new event document utilities.

--- a/ts/samples/dapr-sample/packages/api-multi-projector/package.json
+++ b/ts/samples/dapr-sample/packages/api-multi-projector/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
+    "dev": "tsx watch src/server-sdk.ts",
+    "dev:express": "tsx watch src/server.ts",
+    "start": "node dist/server-sdk.js",
     "build": "tsc",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit"
