--- a/ts/samples/dapr-sample/tsconfig.json
+++ b/ts/samples/dapr-sample/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ES2022"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "declaration": true,
