Refactor event creation and metadata handling across various modules
- Introduced `createEvent` and `createEventMetadata` functions to streamline event creation and metadata management in `unified-executor.ts`, `event-store-adapter.ts`, and `events-in-memory-store.ts`.
- Updated event handling in `command-schema.ts`, `schema-domain-types.ts`, and `schema-executor.ts` to utilize the new event creation functions.
- Enhanced type exports in `index.ts` to include `IAggregatePayload` and `ICommand`.
- Modified event retrieval types in `projections.ts` and improved error handling in `sekiban-dapr-executor` classes.
- Updated Dapr actor reminders to use `@js-temporal/polyfill` for better time management.
- Refined saga error handling by introducing a `GeneralSagaError` class and updating existing saga error classes for consistency.
- Adjusted TypeScript configuration files across multiple packages to extend from a base configuration and improve type checking.
- Replaced direct imports from `core/src` with imports from `@sekiban/core` in test utilities and saga modules for better modularity.

--- a/ts/src/packages/dapr/package.json
+++ b/ts/src/packages/dapr/package.json
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "build": "npm run typecheck && tsup",
+    "build": "tsup",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -34,6 +34,7 @@
   "dependencies": {
     "@sekiban/core": "file:../core",
     "@dapr/dapr": "^3.3.0",
+    "@js-temporal/polyfill": "^0.3.0",
     "neverthrow": "^8.0.0",
     "awilix": "^10.0.2"
   },
