Update package references across multiple projects to latest versions
- Updated Microsoft.AspNetCore.OpenApi from 9.0.6 to 9.0.7 in DaprSample.Api, MemStat.Net.Web, and OrleansSekiban.ApiService projects.
- Updated Scalar.AspNetCore from 2.5.3 to 2.6.1 in DaprSample.Api and OrleansSekiban.ApiService projects.
- Updated CommunityToolkit.Aspire.Hosting.Dapr from 9.5.0 to 9.6.0 in DaprSample.AppHost and DaprSekiban.AppHost projects.
- Updated Microsoft.Extensions.Http.Resilience from 9.6.0 to 9.7.0 in DaprSample.ServiceDefaults and OrleansSekiban.ServiceDefaults projects.
- Updated xunit.runner.visualstudio from 2.8.2 to 3.1.2 in DaprSample.Tests and other test projects.
- Updated Microsoft.Extensions.Logging.Abstractions from 9.0.0 to 9.0.7 in DaprSample.Tests.
- Updated Microsoft.Orleans.Server and related Orleans packages from 9.1.2 to 9.2.0 in various projects.
- Updated Microsoft.Extensions.DependencyInjection and related packages from 9.0.6 to 9.0.7 in multiple projects.
- Updated Google.Protobuf from 3.29.3 to 3.31.1 and Grpc.Tools from 2.62.0 to 2.72.0 in DaprSekiban.Domain project.
- Updated Sekiban.Pure packages from 1.0.1-preview16 to 1.0.1-preview17 in templates and other projects.
- Updated System.Text.Json from 9.0.6 to 9.0.7 in tools/SekibanDocumentMcpSse project.

--- a/tools/SekibanDocumentMcpSse/SekibanDocumentMcpSse.csproj
+++ b/tools/SekibanDocumentMcpSse/SekibanDocumentMcpSse.csproj
@@ -10,10 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.4" />
-    <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
+    <PackageReference Include="OpenAI" Version="2.2.0" />
     <PackageReference Include="Markdig" Version="0.41.3" />
     <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.1" />
-    <PackageReference Include="System.Text.Json" Version="9.0.6" />
+    <PackageReference Include="System.Text.Json" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
