--- a/ts/samples/dapr-sample/packages/api-event-handler/tsconfig.json
+++ b/ts/samples/dapr-sample/packages/api-event-handler/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
+    "module": "ES2022",
+    "moduleResolution": "node",
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
