Add DaprSample.EventRelay project and configure event relay functionality

--- a/internalUsages/DaprSample/DaprSample.AppHost/DaprSample.AppHost.csproj
+++ b/internalUsages/DaprSample/DaprSample.AppHost/DaprSample.AppHost.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DaprSample.Api\DaprSample.Api.csproj" />
+    <ProjectReference Include="..\DaprSample.EventRelay\DaprSample.EventRelay.csproj" />
     <ProjectReference Include="..\DaprSample.Web\DaprSample.Web.csproj" />
     <ProjectReference Include="..\DaprSample.ServiceDefaults\DaprSample.ServiceDefaults.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
