Event Relay runs fine.

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.AppHost/DaprSekiban.AppHost.csproj
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.AppHost/DaprSekiban.AppHost.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DaprSekiban.ApiService\DaprSekiban.ApiService.csproj" />
     <ProjectReference Include="..\DaprSekiban.Web\DaprSekiban.Web.csproj" />
+    <ProjectReference Include="..\DaprSekiban.EventRelay\DaprSekiban.EventRelay.csproj" />
     <ProjectReference Include="..\DaprSekiban.ServiceDefaults\DaprSekiban.ServiceDefaults.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
