Refactor pubsub and statestore components to use Redis and PostgreSQL; update run-all-services script for consistent storage usage

--- a/ts/samples/dapr-sample/dapr/components/statestore.yaml
+++ b/ts/samples/dapr-sample/dapr/components/statestore.yaml
@@ -3,8 +3,12 @@ kind: Component
 metadata:
   name: statestore
 spec:
-  type: state.in-memory
+  type: state.postgresql
   version: v1
   metadata:
+  - name: connectionString
+    value: "host=localhost user=postgres password=postgres dbname=sekiban port=5432 sslmode=disable"
   - name: actorStateStore
     value: "true"
+  - name: tableName
+    value: "state"
