--- a/ts/samples/dapr-sample/.env.example
+++ b/ts/samples/dapr-sample/.env.example
@@ -2,8 +2,16 @@
 NODE_ENV=development
 PORT=3000
 
-# PostgreSQL configuration
+# Storage configuration
+# Options: inmemory, postgres, cosmos
+STORAGE_TYPE=inmemory
+
+# PostgreSQL configuration (required when STORAGE_TYPE=postgres)
 DATABASE_URL=postgresql://sekiban:sekiban_password@localhost:5432/sekiban_events
+
+# Cosmos DB configuration (required when STORAGE_TYPE=cosmos)
+# COSMOS_CONNECTION_STRING=AccountEndpoint=https://your-cosmos-account.documents.azure.com:443/;AccountKey=your-account-key;
+COSMOS_DATABASE_NAME=sekiban_events
 
 # Dapr configuration
 DAPR_HTTP_PORT=3500
