--- a/ts/samples/dapr-sample/packages/api-event-handler/package.json
+++ b/ts/samples/dapr-sample/packages/api-event-handler/package.json
@@ -15,6 +15,7 @@
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
+    "@sekiban/cosmos": "file:../../../../src/packages/cosmos",
     "@dapr-sample/domain": "workspace:*",
     "express": "^4.18.2",
     "pg": "^8.11.3",
