--- a/ts/samples/dapr-sample/packages/api/package.json
+++ b/ts/samples/dapr-sample/packages/api/package.json
@@ -19,7 +19,10 @@
     "test": "vitest",
     "test:command": "tsx src/test-command-debug.ts",
     "init-db": "tsx src/init-database.ts",
-    "start:postgres": "USE_POSTGRES=true npm run start"
+    "start:postgres": "STORAGE_TYPE=postgres npm run start",
+    "start:cosmos": "STORAGE_TYPE=cosmos npm run start",
+    "dev:postgres": "STORAGE_TYPE=postgres npm run dev",
+    "dev:cosmos": "STORAGE_TYPE=cosmos npm run dev"
   },
   "dependencies": {
     "@dapr-sample/domain": "workspace:*",
@@ -28,6 +31,7 @@
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
+    "@sekiban/cosmos": "file:../../../../src/packages/cosmos",
     "awilix": "^10.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
