[ts] cosmos package test and improve package Fixes #704

--- a/ts/samples/dapr-sample/package.json
+++ b/ts/samples/dapr-sample/package.json
@@ -30,5 +30,8 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "dependencies": {
+    "@sekiban/cosmos": "0.1.0-alpha.1"
   }
 }
