--- a/ts/samples/dapr-sample/packages/api-multi-projector/package.json
+++ b/ts/samples/dapr-sample/packages/api-multi-projector/package.json
@@ -10,12 +10,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@dapr/dapr": "^3.5.2",
     "@dapr-sample/domain": "workspace:*",
+    "@dapr/dapr": "^3.5.2",
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
-    "@sekiban/cosmos": "file:../../../../src/packages/cosmos",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,7 +22,8 @@
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "neverthrow": "^8.1.1",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
+    "@types/uuid": "^10.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
