--- a/ts/samples/dapr-sample/packages/api/package.json
+++ b/ts/samples/dapr-sample/packages/api/package.json
@@ -29,6 +29,8 @@
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
+    "@sekiban/cosmos": "file:../../../../src/packages/cosmos",
+    "@azure/cosmos": "^4.0.0",
     "awilix": "^10.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
