feat: Remove excessive logging and adjust log levels for production readiness

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.ApiService/appsettings.Development.json
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.ApiService/appsettings.Development.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.Orleans": "Information",
-      "Dapr": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Orleans": "Warning",
+      "Sekiban": "Information",
+      "Dapr": "Warning"
     }
   },
   "Sekiban": {
