--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.ApiService/appsettings.json
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.ApiService/appsettings.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Orleans": "Warning"
+      "Microsoft.Orleans": "Warning",
+      "Sekiban": "Warning",
+      "Dapr": "Warning"
     }
   },
   "AllowedHosts": "*"
