--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.EventRelay/appsettings.Development.json
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.EventRelay/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Sekiban": "Information",
+      "Dapr": "Warning"
     }
   }
 }
