Refactor: Remove in-memory storage support and enforce PostgreSQL or CosmosDB usage
- Deleted test files related to in-memory event store and projections.
- Updated storage provider configuration to use PostgreSQL as the default.
- Modified server setup to remove in-memory event store initialization.
- Adjusted scripts to eliminate in-memory run options.
- Enhanced TypeScript strictness for better type safety.
- Updated Dapr component configuration to use PostgreSQL for state storage.
- Cleaned up test scripts to ensure they align with the new storage requirements.

--- a/ts/samples/dapr-sample/.env.example
+++ b/ts/samples/dapr-sample/.env.example
@@ -3,11 +3,12 @@ NODE_ENV=development
 PORT=3000
 
 # Storage configuration
-# Options: inmemory, postgres, cosmos
-STORAGE_TYPE=inmemory
+# CLAUDE.md: Only postgres supported - no in-memory workarounds allowed
+STORAGE_TYPE=postgres
 
 # PostgreSQL configuration (required when STORAGE_TYPE=postgres)
-DATABASE_URL=postgresql://sekiban:sekiban_password@localhost:5432/sekiban_events
+# Set your actual database URL in your local .env file
+# Example: DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 
 # Cosmos DB configuration (required when STORAGE_TYPE=cosmos)
 # COSMOS_CONNECTION_STRING=AccountEndpoint=https://your-cosmos-account.documents.azure.com:443/;AccountKey=your-account-key;
