--- a/ts/samples/dapr-sample/packages/api/dapr/components/statestore.yaml
+++ b/ts/samples/dapr-sample/packages/api/dapr/components/statestore.yaml
@@ -3,6 +3,10 @@ kind: Component
 metadata:
   name: statestore
 spec:
-  type: state.in-memory
+  type: state.postgresql
   version: v1
-  metadata: []
+  metadata:
+  - name: connectionString
+    value: "postgresql://sekiban:sekiban_password@localhost:5432/sekiban_events"
+  - name: actorStateStore
+    value: "true"
