feat: integrate Cosmos DB client and update configuration for multi-projector service

--- a/ts/samples/dapr-sample/packages/api-multi-projector/tsconfig.json
+++ b/ts/samples/dapr-sample/packages/api-multi-projector/tsconfig.json
@@ -9,6 +9,7 @@
     { "path": "../domain" },
     { "path": "../../../../src/packages/core" },
     { "path": "../../../../src/packages/dapr" },
-    { "path": "../../../../src/packages/postgres" }
+    { "path": "../../../../src/packages/postgres" },
+    { "path": "../../../../src/packages/cosmos" }
   ]
 }
