--- a/ts/samples/dapr-sample/packages/api-multi-projector/package.json
+++ b/ts/samples/dapr-sample/packages/api-multi-projector/package.json
@@ -15,6 +15,8 @@
     "@sekiban/core": "file:../../../../src/packages/core",
     "@sekiban/dapr": "file:../../../../src/packages/dapr",
     "@sekiban/postgres": "file:../../../../src/packages/postgres",
+    "@sekiban/cosmos": "file:../../../../src/packages/cosmos",
+    "@azure/cosmos": "^4.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
