feat: Enhance AggregateListProjector with projector validation and add Cosmos DB support
- Added validation for projector properties in AggregateListProjector.
- Updated package.json files to include @azure/cosmos dependency.
- Modified configuration to support multiple storage types including Cosmos DB.
- Implemented event store initialization for Cosmos DB.
- Introduced new queries: ActiveTaskListQuery and TasksByAssigneeQuery.
- Updated task routes to support filtering and pagination.
- Enhanced domain types registration for new queries and projectors.
- Improved run-all-services.sh to clean build artifacts and verify outputs.
- Fixed test-all-operations.sh to align with updated response structures.

--- a/ts/templates/sekiban-sample/template/packages/api-event-handler/package.json
+++ b/ts/templates/sekiban-sample/template/packages/api-event-handler/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@azure/cosmos": "^4.3.0",
     "@dapr/dapr": "^3.5.2",
     "@sekiban/core": "^0.1.0-alpha.5",
     "@sekiban/dapr": "^0.1.0-alpha.5",
