--- a/ts/templates/sekiban-sample/template/packages/api/package.json
+++ b/ts/templates/sekiban-sample/template/packages/api/package.json
@@ -25,10 +25,10 @@
     "@dapr-sample/domain": "file:../domain",
     "@dapr-sample/workflows": "file:../workflows",
     "@dapr/dapr": "^3.5.2",
-    "@sekiban/core": "^0.1.0-alpha.5",
-    "@sekiban/dapr": "^0.1.0-alpha.5",
-    "@sekiban/postgres": "^0.1.0-alpha.5",
-    "@sekiban/cosmos": "^0.1.0-alpha.5",
+    "@sekiban/core": "file:../../../../../src/packages/core",
+    "@sekiban/dapr": "file:../../../../../src/packages/dapr",
+    "@sekiban/postgres": "file:../../../../../src/packages/postgres",
+    "@sekiban/cosmos": "file:../../../../../src/packages/cosmos",
     "awilix": "^10.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
