--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
@@ -15,29 +15,33 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.2.1" />
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.2.1" />
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.1" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+        <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.4.0"/>
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.4.0"/>
+        <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.4.0"/>
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2"/>
-        <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2"/>
-        <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2"/>
-        <PackageReference Include="Microsoft.Orleans.Server" Version="9.1.2"/>
-        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2"/>
+        <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.Cosmos" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Server" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Streaming.AzureStorage" Version="9.2.1"/>
+        <PackageReference Include="Microsoft.Orleans.Streaming.EventHubs" Version="9.2.1"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0"/>
         <PackageReference Include="OrleansDashboard" Version="8.2.0"/>
-        <PackageReference Include="Scalar.AspNetCore" Version="2.2.5" />
-        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.1-preview06" />
-        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.1-preview06" />
-        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.1-preview06" />
-        <PackageReference Include="Sekiban.Pure.ReadModel" Version="1.0.1-preview06" />
-        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.1-preview06" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.6.5"/>
+        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.1-preview21"/>
+        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.1-preview21"/>
+        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.1-preview21"/>
+        <PackageReference Include="Sekiban.Pure.ReadModel" Version="1.0.1-preview21"/>
     </ItemGroup>
 
 </Project>
