--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.Domain/AspireEventSample.Domain.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.Domain/AspireEventSample.Domain.csproj
@@ -8,8 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Orleans.Serialization" Version="9.1.2"/>
-        <PackageReference Include="Sekiban.Pure" Version="1.0.1-preview06" />
+        <PackageReference Include="Microsoft.Orleans.Serialization" Version="9.2.1"/>
+        <PackageReference Include="Sekiban.Pure" Version="1.0.1-preview21"/>
+        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.1-preview21"/>
     </ItemGroup>
 
 </Project>
