--- a/tests/Sekiban.Dcb.Tests/Sekiban.Dcb.Tests.csproj
+++ b/tests/Sekiban.Dcb.Tests/Sekiban.Dcb.Tests.csproj
@@ -12,10 +12,16 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
+        <PackageReference Include="ResultBoxes" Version="0.3.31" />
     </ItemGroup>
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\Sekiban.Dcb\Sekiban.Dcb.csproj" />
+        <ProjectReference Include="..\..\internalUsages\Dcb.Domain\Dcb.Domain.csproj" />
     </ItemGroup>
 
 </Project>
