--- a/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
+++ b/internalUsages/DcbOrleans.ApiService/DcbOrleans.ApiService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.4.0" />
     <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.4.0" />
     <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.4.0" />
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.2.1" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.2.1" />
@@ -24,6 +25,7 @@
     <ProjectReference Include="..\DcbOrleans.ServiceDefaults\DcbOrleans.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\src\Sekiban.Dcb\Sekiban.Dcb.csproj" />
     <ProjectReference Include="..\..\src\Sekiban.Dcb.Orleans\Sekiban.Dcb.Orleans.csproj" />
+    <ProjectReference Include="..\..\src\Sekiban.Dcb.Postgres\Sekiban.Dcb.Postgres.csproj" />
     <ProjectReference Include="..\Dcb.Domain\Dcb.Domain.csproj" />
   </ItemGroup>
 
