Add classroom and enrollment management features
- Updated NavMenu to include links for Classrooms and Enrollments.
- Created Classrooms.razor for managing classrooms, including adding, viewing, and deleting classrooms.
- Created Enrollments.razor for managing student enrollments in classrooms, including enrolling and dropping students.
- Updated Students.razor to implement a modal for adding new students.
- Enhanced Weather.razor to manage weather forecasts with add and edit functionalities.
- Updated project references to include Dcb.Domain.

--- a/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
+++ b/internalUsages/DcbOrleans.Web/DcbOrleans.Web.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DcbOrleans.ServiceDefaults\DcbOrleans.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Dcb.Domain\Dcb.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
