--- a/src/Sekiban.Dcb/Sekiban.Dcb.csproj
+++ b/src/Sekiban.Dcb/Sekiban.Dcb.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0"/>
         <PackageReference Include="ResultBoxes" Version="0.3.31"/>
     </ItemGroup>
 
