--- a/internalUsages/Dcb.Domain/Dcb.Domain.csproj
+++ b/internalUsages/Dcb.Domain/Dcb.Domain.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="ResultBoxes" Version="0.3.31"/>
+        <PackageReference Include="Microsoft.Orleans.Serialization" Version="9.2.1"/>
     </ItemGroup>
 
 </Project>
