--- a/src/Sekiban.Dcb.Orleans/Sekiban.Dcb.Orleans.csproj
+++ b/src/Sekiban.Dcb.Orleans/Sekiban.Dcb.Orleans.csproj
@@ -27,4 +27,12 @@
         <ProjectReference Include="..\Sekiban.Dcb\Sekiban.Dcb.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <!-- Exclude domain-specific surrogates which must not be shipped from this shared library -->
+        <Compile Remove="Surrogates/GetWeatherForecastListQuerySurrogate.cs" />
+        <Compile Remove="Surrogates/GetWeatherForecastListQuerySurrogateConverter.cs" />
+        <Compile Remove="Surrogates/MultiProjectionGrainStatusSurrogate.cs" />
+        <Compile Remove="Surrogates/MultiProjectionGrainStatusSurrogateConverter.cs" />
+    </ItemGroup>
+
 </Project>
