Update package references across multiple projects
- Upgraded Microsoft.Sbom.Targets from version 4.1.0 to 4.1.1 in various projects.
- Updated Microsoft.Extensions.DependencyInjection from version 9.0.7 to 9.0.8 in multiple test projects.
- Upgraded NUnit from version 4.3.2 to 4.4.0 in relevant test projects.
- Updated Microsoft.EntityFrameworkCore and related packages from version 9.0.7 to 9.0.8 in Postgres projects.
- Upgraded xunit.runner.visualstudio from version 2.8.2 to 3.1.4 in several test projects.
- Updated System.Text.Json from version 9.0.7 to 9.0.8 in SekibanDocumentMcpSse project.
- Refactored assertions in tests to use Assert instead of FluentAssertions for consistency.

--- a/internalUsages/DcbOrleans.ApiService/appsettings.Development.json
+++ b/internalUsages/DcbOrleans.ApiService/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Azure.Core": "Warning",
+      "Azure.Storage": "Warning",
+      "Orleans.Streams": "Warning",
+      "Orleans.Hosting": "Warning"
     }
   }
 }
